<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsAndTricksActivity">

    <TextView
        android:id="@+id/tipsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tips_r_d"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="#147780" />

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="570dp"
        android:layout_marginTop="1sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsTitle"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/tipsHeadline"
            android:layout_width="203sp"
            android:layout_height="30sp"
            android:layout_marginTop="50sp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/samtalestarter"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck"
            tools:textColor="#147780" />

        <TextView
            android:id="@+id/tipsTextHeadline"
            android:layout_width="332dp"
            android:layout_height="44dp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/eksempel_p_nogle_samtalestartere"
            android:textColor="#000000"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tipsText"
            android:layout_width="364dp"
            android:layout_height="86dp"
            android:layout_marginTop="35sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/hej_mit_navn_er_x_jeg_er_x_r_gammel_og_blev_diagnostiseret_med_angst_i_x_jeg_h_ber_at_denne_gruppe_kan_hj_lpe_mig_med_x"
            android:textColor="#000000"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="363dp"
            android:layout_height="79dp"
            android:layout_marginTop="35sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/i_hverdagen_oplever_jeg_x_er_der_andre_som_har_samme_oplevelser"
            android:textColor="#000000"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>